# cot

./: .gitignore  .insta.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  bacon.toml  clippy.toml  codecov.yml  compose.yml  deny.toml  justfile  release-plz.toml  rustfmt.toml
cot/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
cot-cli/: CHANGELOG.md  Cargo.toml
cot-cli/src/: args.rs  handlers.rs  lib.rs  main.rs  migration_generator.rs  new_project.rs  test_utils.rs  utils.rs
cot-cli/src/project_template/: Cargo.lock.template  Cargo.toml  Cargo.toml.template
cot-cli/tests/: cli.rs  manpages.rs  migration_generator.rs  new_project.rs
cot-cli/tests/migration_generator/: create_model.rs  foreign_key_cycle.rs
cot-cli/tests/resources/: example_database_model.rs
cot-cli/tests/snapshot_testing/: mod.rs
cot-codegen/: CHANGELOG.md  Cargo.toml
cot-codegen/src/: expr.rs  lib.rs  model.rs  symbol_resolver.rs
cot-core/: Cargo.toml
cot-core/src/: body.rs  error.rs  handler.rs  headers.rs  html.rs  json.rs  lib.rs  middleware.rs  request.rs  response.rs
cot-core/src/error/: backtrace.rs  error_impl.rs  method_not_allowed.rs
cot-core/src/request/: extractors.rs
cot-core/src/response/: into_response.rs
cot-macros/: CHANGELOG.md  Cargo.toml
cot-macros/src/: admin.rs  api_response_enum.rs  as_form_field.rs  cache.rs  dbtest.rs  form.rs  from_request.rs  lib.rs  main_fn.rs  migration_op.rs  model.rs  query.rs  select_as_form_field.rs  select_choice.rs  utils.rs
cot-macros/tests/: compile_tests.rs
cot-macros/tests/ui/: attr_main.rs  attr_main_args.rs  attr_main_args.stderr  attr_migration_op.rs  attr_migration_op_not_async.rs  attr_migration_op_not_async.stderr  attr_migration_op_return_type_invalid.rs  attr_migration_op_return_type_invalid.stderr  attr_model.rs  attr_model_enum.rs  attr_model_generic.rs  attr_model_generic.stderr  attr_model_migration_invalid_name.rs  attr_model_multiple_pks.rs  attr_model_multiple_pks.stderr  attr_model_no_pk.rs  attr_model_no_pk.stderr  attr_model_tuple.rs  derive_admin_model.rs  derive_admin_model_derive_first.rs  derive_api_operation_response.rs  derive_api_operation_response_enum.rs  derive_api_operation_response_enum.stderr  derive_api_operation_response_invalid_variant_multi_tuple.rs  derive_api_operation_response_invalid_variant_multi_tuple.stderr  derive_api_operation_response_invalid_variant_struct.rs  derive_api_operation_response_invalid_variant_struct.stderr  derive_api_operation_response_invalid_variant_unit.rs  derive_api_operation_response_invalid_variant_unit.stderr  derive_api_operation_response_missing_trait_impl.rs  derive_api_operation_response_missing_trait_impl.stderr  derive_as_form_field.rs  derive_form.rs  derive_from_request_head.rs  derive_from_request_head_enum.rs  derive_from_request_head_enum.stderr  derive_from_request_parts.rs  derive_from_request_parts_enum.rs  derive_from_request_parts_enum.stderr  derive_into_response.rs  (+34 more)
cot/benches/: bench_utils.rs  router.rs
cot/scss/: error.scss
cot/scss/admin/: admin.scss
cot/src/: admin.rs  auth.rs  body.rs  cache.rs  cli.rs  common_types.rs  config.rs  db.rs  email.rs  error.rs  error_page.rs  form.rs  forms.rs  handler.rs  headers.rs  html.rs  lib.rs  middleware.rs  openapi.rs  private.rs  project.rs  request.rs  response.rs  router.rs  serializers.rs  session.rs  static_files.rs  test.rs  utils.rs
cot/src/auth/: db.rs
cot/src/cache/: store.rs
cot/src/db/: fields.rs  impl_mysql.rs  impl_postgres.rs  impl_sqlite.rs  migrations.rs  query.rs  relations.rs  sea_query_db.rs
cot/src/email/: transport.rs
cot/src/error/: backtrace.rs  error_impl.rs  handler.rs  not_found.rs  uncaught_panic.rs
cot/src/form/: field_value.rs  fields.rs
cot/src/forms/: fields.rs
cot/src/middleware/: live_reload.rs
cot/src/openapi/: swagger_ui.rs
cot/src/request/: extractors.rs  path_params_deserializer.rs
cot/src/response/: into_response.rs
cot/src/router/: method.rs  path.rs
cot/src/session/: db.rs  store.rs
cot/src/utils/: accept_header_parser.rs  chrono.rs  graph.rs
cot/static/admin/: admin.css
cot/static/test/: test.txt
cot/templates/: 404.html  405.html  500.html  default_error.css  default_error.html  error.css  error.html  fail.html
cot/templates/admin/: base.html  login.html  model.html  model_edit.html  model_list.html  model_remove.html
cot/tests/: admin.rs  auth.rs  compile_tests.rs  db.rs  extractors.rs  flareon_project.rs  form.rs  forms.rs  from_request.rs  openapi.rs  project.rs  router.rs  select_choice.rs  session_store.rs
cot/tests/ui/: unimplemented_admin_model.rs  unimplemented_admin_model.stderr  unimplemented_db_model.rs  unimplemented_db_model.stderr  unimplemented_form.rs  unimplemented_form.stderr  unimplemented_request_handler.rs  unimplemented_request_handler.stderr
flareon/: Cargo.toml  build.rs
flareon-cli/: Cargo.toml
flareon-cli/src/: main.rs  migration_generator.rs  utils.rs
flareon-cli/tests/: migration_generator.rs
flareon-cli/tests/migration_generator/: create_model.rs  foreign_key.rs  foreign_key_cycle.rs
flareon-codegen/: Cargo.toml
flareon-codegen/src/: expr.rs  lib.rs  model.rs  symbol_resolver.rs
flareon-macros/: Cargo.toml
flareon-macros/src/: dbtest.rs  form.rs  lib.rs  main_fn.rs  model.rs  query.rs
flareon-macros/tests/: compile_tests.rs
flareon-macros/tests/ui/: attr_main.rs  attr_main_args.rs  attr_main_args.stderr  attr_model.rs  attr_model_enum.rs  attr_model_enum.stderr  attr_model_generic.rs  attr_model_migration_invalid_name.rs  attr_model_migration_invalid_name.stderr  attr_model_multiple_pks.rs  attr_model_no_pk.rs  (+11 more)
flareon-orm/: Cargo.toml
flareon/src/: admin.rs  auth.rs  config.rs  db.rs  error.rs  error_page.rs  forms.rs  headers.rs  lib.rs  middleware.rs  prelude.rs  private.rs  request.rs  response.rs  router.rs  static_files.rs  test.rs
flareon/templates/: error.css  error.html  fail.html
flareon/tests/: auth.rs  db.rs  flareon_project.rs  forms.rs  router.rs
(+168 files in other folders)
