[workspace]
members = [
    "flareon",
    "flareon-cli",
    "flareon-codegen",
    "flareon-macros",
    # Examples
    "examples/hello-world",
    "examples/todo-list",
    "examples/sessions",
    "examples/admin",
    "examples/json",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
askama_derive = "0.12.5"
askama_parser = "0.2.1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", default-features = false }
backtrace = "0.3"
bytes = "1.9"
cargo_toml = "0.20"
chrono = { version = "0.4", default-features = false }
clap = "4"
clap-verbosity-flag = { version = "3", default-features = false }
convert_case = "0.6"
darling = "0.20"
derive_builder = "0.20"
derive_more = "1"
fake = "3.1"
flareon = { path = "flareon" }
flareon_codegen = { path = "flareon-codegen" }
flareon_macros = { path = "flareon-macros" }
form_urlencoded = "1"
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
hmac = "0.13.0-pre.4"
http = "1.1"
http-body = "1"
http-body-util = "0.1"
indexmap = "2"
mime_guess = { version = "2", default-features = false }
mockall = "0.13"
password-auth = { version = "1.1.0-pre.1", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rustversion = "1"
sea-query = { version = "0.32.0-rc.2", default-features = false }
sea-query-binder = { version = "0.7.0-rc.2", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.11.0-pre.4"
sqlx = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
syn = { version = "2", default-features = false }
sync_wrapper = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.35", default-features = false }
tokio = { version = "1.41", default-features = false }
tower = "0.5.2"
tower-sessions = { version = "0.13", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
trybuild = { version = "1", features = ["diff"] }
