[workspace]
members = [
    "cot",
    "cot-cli",
    "cot-codegen",
    "cot-macros",
    # Examples
    "examples/hello-world",
    "examples/todo-list",
    "examples/sessions",
    "examples/admin",
    "examples/json",
    "examples/custom-task",
    "examples/custom-error-pages",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
deprecated-safe = "warn"
keyword-idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
future_not_send = "warn"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.95"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", default-features = false }
backtrace = "0.3"
bytes = "1.9"
cargo_toml = "0.20"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["deprecated"] }
clap-verbosity-flag = { version = "3", default-features = false }
convert_case = "0.6"
cot = { path = "cot" }
cot_codegen = { path = "cot-codegen" }
cot_macros = { path = "cot-macros" }
darling = "0.20"
derive_builder = "0.20"
derive_more = "1"
fake = "3.1"
form_urlencoded = "1"
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
hex = "0.4"
hmac = "0.13.0-pre.4"
http = "1.1"
http-body = "1"
http-body-util = "0.1"
humansize = "2.1.3"
indexmap = "2"
mime_guess = { version = "2", default-features = false }
mockall = "0.13"
password-auth = { version = "1.1.0-pre.1", default-features = false }
petgraph = { version = "0.7", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.9", default-features = false }
rinja = "0.3.5"
rustversion = "1"
sea-query = { version = "0.32.0-rc.2", default-features = false }
sea-query-binder = { version = "0.7.0-rc.2", default-features = false }
serde = "1"
serde_json = "1"
sha2 = "0.11.0-pre.4"
sqlx = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
syn = { version = "2", default-features = false }
sync_wrapper = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.35", default-features = false }
tokio = { version = "1.41", default-features = false }
toml = { version = "0.8", default-features = false }
tower = "0.5.2"
tower-livereload = "0.9.6"
tower-sessions = { version = "0.13", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
trybuild = { version = "1", features = ["diff"] }
url = "2"
