[workspace]
members = [
    "cot",
    "cot-cli",
    "cot-codegen",
    "cot-macros",
    # Examples
    "examples/hello-world",
    "examples/todo-list",
    "examples/sessions",
    "examples/admin",
    "examples/json",
    "examples/custom-task",
    "examples/custom-error-pages",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
homepage = "https://cot.rs"
repository = "https://github.com/cot-rs/cot"
keywords = ["web", "framework", "server", "backend"]
readme = "README.md"
authors = [
    "Mateusz Maćkowski <mateusz@mackowski.org>",
    "Marek Grzelak <marek.grzelak@seqre.dev>",
]

[workspace.lints.rust]
deprecated-safe = "warn"
keyword-idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
future_not_send = "warn"

[workspace.dependencies]
anstyle = "1.0.10"
anyhow = "1.0.97"
assert_cmd = "2"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
backtrace = "0.3"
bytes = "1.10"
cargo_toml = "0.22"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["deprecated"] }
clap_complete = "4"
clap_mangen = "0.2.26"
clap-verbosity-flag = { version = "3", default-features = false }
cot = { version = "0.2.1", path = "cot" }
cot_codegen = { version = "0.2.1", path = "cot-codegen" }
cot_macros = { version = "0.2.1", path = "cot-macros" }
darling = "0.20"
derive_builder = "0.20"
derive_more = "2"
fake = "4"
form_urlencoded = "1"
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
heck = "0.5"
hex = "0.4"
hmac = "0.12"
http = "1.3"
http-body = "1"
http-body-util = "0.1"
humansize = "2.1.3"
indexmap = "2"
insta = { version = "1", features = ["filters"] }
insta-cmd = "0.6"
mime_guess = { version = "2", default-features = false }
mockall = "0.13"
password-auth = { version = "1", default-features = false }
petgraph = { version = "0.7", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.9", default-features = false }
rinja = "0.3.5"
rustversion = "1"
sea-query = { version = "0.32", default-features = false }
sea-query-binder = { version = "0.7", default-features = false }
serde = "1"
serde_html_form = "0.2"
serde_json = "1"
serde_path_to_error = "0.1.17"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false }
subtle = { version = "2", default-features = false }
syn = { version = "2", default-features = false }
sync_wrapper = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3.41", default-features = false }
tokio = { version = "1.44", default-features = false }
toml = { version = "0.8", default-features = false }
tower = "0.5.2"
tower-livereload = "0.9.6"
tower-sessions = { version = "0.14", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tracing-test = "0.2"
trybuild = { version = "1", features = ["diff"] }
url = "2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
