[package]
name = "cot_codegen"
version = "0.3.0"
description = "The Rust web framework for lazy developers - code generation utils."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
darling.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }

[features]
default = []
symbol-resolver = ["dep:tracing"]
