[package]
name = "cot_macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use - macros."

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[lints]
workspace = true

[dependencies]
darling.workspace = true
cot_codegen.workspace = true
heck.workspace = true
proc-macro-crate.workspace = true
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn.workspace = true

[dev-dependencies]
cot.workspace = true
trybuild.workspace = true
rustversion.workspace = true
