[package]
name = "cot_macros"
version = "0.1.1"
description = "The Rust web framework for lazy developers - macros."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[lints]
workspace = true

[dependencies]
darling.workspace = true
cot_codegen.workspace = true
heck.workspace = true
proc-macro-crate.workspace = true
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn.workspace = true

[dev-dependencies]
cot.workspace = true
trybuild.workspace = true
rustversion.workspace = true
