[package]
name = "cot_macros"
version = "0.4.0"
description = "The Rust web framework for lazy developers - macros."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[lints]
workspace = true

[dependencies]
askama_derive.workspace = true
cot_codegen.workspace = true
darling.workspace = true
heck.workspace = true
proc-macro-crate.workspace = true
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn.workspace = true

[dev-dependencies]
# "openapi" needed so generated `aide::openapi::Response` resolves in UI tests
cot = { path = "../cot", features = ["test", "openapi"] }
trybuild.workspace = true
rustversion.workspace = true
