[package]
name = "flareon-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use - CLI tool."

[dependencies]
anyhow.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag.workspace = true
darling.workspace = true
env_logger.workspace = true
flareon.workspace = true
flareon_codegen.workspace = true
glob.workspace = true
log.workspace = true
prettyplease.workspace = true
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote.workspace = true
syn.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild.workspace = true
