[package]
name = "flareon_macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use - macros."

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[dependencies]
convert_case.workspace = true
darling = "0.20.10"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.74", features = ["full"] }

[dev-dependencies]
flareon.workspace = true
trybuild = { version = "1.0.99", features = ["diff"] }
