[package]
name = "flareon_macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use - macros."

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[dependencies]
darling.workspace = true
flareon_codegen.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
flareon.workspace = true
trybuild.workspace = true
