[package]
name = "flareon-orm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use - ORM."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
time = { version = "0.3.36", features = ["macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
async-std = { version = "1.8", features = ["attributes"] }
sea-query = "0.31.0-rc.8"
sqlx = "0.7.4"
sea-query-binder = { version = "0.6.0-rc.4", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-async-std-native-tls",
] }
