[package]
name = "flareon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Modern web framework focused on speed and ease of use."

[dependencies]
askama.workspace = true
askama_derive.workspace = true
askama_parser.workspace = true
async-trait.workspace = true
axum.workspace = true
backtrace.workspace = true
bytes.workspace = true
chrono.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
fake = { workspace = true, optional = true }
flareon_macros.workspace = true
form_urlencoded.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
indexmap.workspace = true
log.workspace = true
mime_guess.workspace = true
mockall.workspace = true
password-auth.workspace = true
pin-project-lite.workspace = true
regex.workspace = true
sea-query-binder.workspace = true
sea-query.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
sync_wrapper.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-sessions.workspace = true

[dev-dependencies]
async-stream.workspace = true
fake.workspace = true
futures.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # askama doesn't seem to be working with minimal versions of its dependencies at the moment,
    # so we're manually setting the required versions in the main crate.
    "askama_derive",
    "askama_parser",
    # time requires version 0.3.35 to work with the latest versions of Rust, but we don't use it directly
    "time",
]

[features]
fake = ["dep:fake"]
